--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     // 启用ViewBinding
+    // Android Studio 4.0
     buildFeatures {
         viewBinding = true
     }
+    // Android Studio 3.6
     dataBinding{
         enabled true
     }
@@ -43,6 +45,7 @@ dependencies {
 //    implementation group: 'com.jakewharton', name: 'butterknife', version: '10.2.3'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
