--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 //    implementation group: 'com.jakewharton', name: 'butterknife', version: '10.2.3'
     implementation 'com.google.android.material:material:1.3.0'
+    //图片圆角
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //图片加载
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    // ViewModel and LiveData
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    //汉字转换拼音
+    implementation 'com.belerweb:pinyin4j:2.5.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
